reports/smoke/Linux-Debug-Gargantua/build_log.txt
[  1%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/libMeshb/sources/libmeshb7.c.o
[  1%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/rply/rply.c.o
[  2%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/zlib/adler32.c.o
[  2%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/zlib/compress.c.o
[  3%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/zlib/crc32.c.o
[  3%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/zlib/deflate.c.o
[  4%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/zlib/gzclose.c.o
[  4%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/zlib/gzlib.c.o
[  5%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/zlib/gzread.c.o
[  5%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/zlib/gzwrite.c.o
[  6%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/zlib/infback.c.o
[  6%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/zlib/inffast.c.o
[  7%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/zlib/inflate.c.o
[  7%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/zlib/inftrees.c.o
[  8%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/zlib/trees.c.o
[  8%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/zlib/uncompr.c.o
[  9%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/zlib/zutil.c.o
[  9%] Building CXX object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/PoissonRecon/Factor.cpp.o
[ 10%] Building CXX object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/PoissonRecon/Geometry.cpp.o
[ 10%] Building CXX object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/PoissonRecon/MarchingCubes.cpp.o
[ 11%] Building CXX object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/PoissonRecon/poisson_geogram.cpp.o
[ 11%] Building CXX object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/xatlas/xatlas.cpp.o
[ 11%] Built target geogram_third_party
[ 12%] Building CXX object src/lib/geogram/CMakeFiles/geogram.dir/basic/algorithm.cpp.o
[ 12%] Building CXX object src/lib/geogram/CMakeFiles/geogram.dir/basic/android_utils.cpp.o
[ 13%] Building CXX object src/lib/geogram/CMakeFiles/geogram.dir/basic/assert.cpp.o
[ 13%] Building CXX object src/lib/geogram/CMakeFiles/geogram.dir/basic/attributes.cpp.o
[ 14%] Building CXX object src/lib/geogram/CMakeFiles/geogram.dir/basic/b_stream.cpp.o
[ 14%] Building CXX object src/lib/geogram/CMakeFiles/geogram.dir/basic/boolean_expression.cpp.o
[ 15%] Building CXX object src/lib/geogram/CMakeFiles/geogram.dir/basic/command_line.cpp.o
[ 15%] Building CXX object src/lib/geogram/CMakeFiles/geogram.dir/basic/command_line_args.cpp.o
[ 16%] Building CXX object src/lib/geogram/CMakeFiles/geogram.dir/basic/common.cpp.o
[ 16%] Building CXX object src/lib/geogram/CMakeFiles/geogram.dir/basic/counted.cpp.o
[ 17%] Building CXX object src/lib/geogram/CMakeFiles/geogram.dir/basic/debug_stream.cpp.o
/home/runner/work/geogram/geogram/src/lib/geogram/basic/common.cpp:73:21: error: ‘optional’ in namespace ‘std’ does not name a template type
   73 |         static std::optional<MySingleton>& instance(int flags) {
      |                     ^~~~~~~~
/home/runner/work/geogram/geogram/src/lib/geogram/basic/common.cpp:73:16: note: ‘std::optional’ is only available from C++17 onwards
   73 |         static std::optional<MySingleton>& instance(int flags) {
      |                ^~~
/home/runner/work/geogram/geogram/src/lib/geogram/basic/common.cpp: In function ‘void GEO::initialize(int)’:
/home/runner/work/geogram/geogram/src/lib/geogram/basic/common.cpp:199:22: error: ‘instance’ is not a member of ‘GEO::{anonymous}::MySingleton’
  199 |         MySingleton::instance(flags);
      |                      ^~~~~~~~
/home/runner/work/geogram/geogram/src/lib/geogram/basic/common.cpp: In function ‘void GEO::terminate()’:
/home/runner/work/geogram/geogram/src/lib/geogram/basic/common.cpp:203:22: error: ‘instance’ is not a member of ‘GEO::{anonymous}::MySingleton’
  203 |         MySingleton::instance(GEOGRAM_INSTAL_NONE).reset();
      |                      ^~~~~~~~
make[2]: *** [src/lib/geogram/CMakeFiles/geogram.dir/build.make:188: src/lib/geogram/CMakeFiles/geogram.dir/basic/common.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/Makefile2:670: src/lib/geogram/CMakeFiles/geogram.dir/all] Error 2
make: *** [Makefile:156: all] Error 2
